--- a/DockerFile
+++ b/DockerFile
@@ -20,10 +20,6 @@ RUN npm install -g @angular/cli@11.2.11
 # add app
 COPY . /app
 
-# run tests
-RUN ng test --watch=false
-RUN ng e2e --port 4202
-
 # generate build
 RUN ng build --output-path=dist
 
@@ -37,4 +33,4 @@ COPY --from=build /app/dist /usr/share/nginx/html
 EXPOSE 80
 
 # run nginx
-CMD ["nginx", "-g", "daemon off;"]
+ENTRYPOINT  ["nginx", "-g", "daemon off;"]
